z-index fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -448,7 +448,7 @@ input[type='email'] {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   left: 0;
   top: 0;
   width: 100%;
